--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
-  - name: GitHub Feedback
+  - name: Leave your Feedback
     url: https://github.com/annadocker/test/discussions
     about: Share your feedback with the team.
